Fix for bug #42548 "PROCEDURE xxx can't return a result set"